# swipl-cpp-logical-programming

./: .gitmodules  CMakeLists.txt  README.md
ext/swipl-cpp-bindings/: CMakeLists.txt
include/: Properties.h  PropertyBag.h  PropertyGenerator.h  PropertyMap.h  PropertyVault.h
src/: Properties.cpp
tests/: CMakeLists.txt  PropertyMapTest.cpp  PropertyVaultTest.cpp
